<resources>
    <string name="app_name">CoinMarket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_info">info</string>
    <string name="_1">1</string>
    <string name="search_hint">Search</string>
    <string name="activity_main_title">List</string>
    <string name="sort_hint">sort</string>
    <string name="star_hint">star</string>
    <string name="c_menu_news">News</string>
    <string name="c_menu_notifications">Notifications</string>
    <string name="c_menu_list">List</string>
    <string name="c_menu_favourites">Favourites</string>
    <string name="c_menu_remove_ads">Remove ads</string>
    <string name="c_menu_settings">Settings</string>
    <string name="c_menu_about_us">About us</string>
    <string name="nav_header_title">The Crypto App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
